[migration 9] Record the phase's verification and the new numbers
545 tests, 1 failed, 21 skipped on both flavours - the two suites are now identical, and the
one failure is GffManagerTest.testLoadGenesTranscript, which asserts on a biotype Ensembl
returns over REST. Phase 9 took that from 3-4 by fixing two BlatSearchManagerTest tests at
the cause rather than excluding them: they were recorded here as live-data failures and had
never been meant to touch the network at all.

make cli-test is green for the first time since 2018: 145 rows, 129 passed, 0 failed, 16
skipped. TEST-BASELINE.md's "is unrunnable" section becomes "runs again", with the ten stale
expectations dated to the develop commits that broke them.

Also records what this environment cannot verify - the workflow running in CI, the Windows
bundle starting, az:// and the LLM round trip - rather than letting them look covered.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>